--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,6 @@ gis
 *html
 *docx
 docs
+outputCompiled/outputCompiledFire.csv
+outputCompiled/outputCompiledHarvest.csv
+outputCompiled/outputCompiledVolAt120.csv
