--- a/.gitignore
+++ b/.gitignore
@@ -7,6 +7,4 @@ gis
 *html
 *docx
 docs
-outputCompiled/outputCompiledFire.csv
-outputCompiled/outputCompiledHarvest.csv
-outputCompiled/outputCompiledVolAt120.csv
+offline
